--- a/home.html
+++ b/home.html
@@ -326,7 +326,7 @@ github.com/Aishwarya-Loni-15
 <p>
 🔗 LinkedIn:
 <a href="https://www.linkedin.com/in/aishwarya-loni-b48a602a2" target="_blank" style="color:#00e5ff;">
-linkedin.com/in/aishwaryaloni
+linkedin.com/in/aishwarya-loni-b48a602a2
 </a>
 </p>
 
@@ -390,3 +390,4 @@ function closeModal(){
 
 </body>
 </html>
+
